--- a/index.html
+++ b/index.html
@@ -28,4 +28,9 @@
   
   <p><h2>Projets</h2></p>                                                            
 
-  
+  <ul>
+ <li><a href="projet.html">Projet Sierpinski</a></li> 
+<ul>
+
+
+<head><link href="style.css" rel="stylesheet" type="text/css"></head>
