--- a/projet.html
+++ b/projet.html
@@ -1,1 +1,1 @@
-Le BOSS c joshua
+<p>Le projet sierpinski est un projet qui sera note au cours de cette evaluation, on peut le faire grace a Edupython et il est quand meme assez long a faire.<p>
