--- a/projet.html
+++ b/projet.html
@@ -1,1 +1,11 @@
+<title> Projet Sierpinski</title>
+
 <p>Le projet sierpinski est un projet qui sera note au cours de cette evaluation, on peut le faire grace a Edupython et il est quand meme assez long a faire.<p>
+
+<p>Les plus grosses difficulter que j'ai rencontre durant ce projet ca a ete:<p>
+  <ul>
+    <li>Tout d'abord c'est que c'etait long</li>
+    <li>En suite se trompe sur un caractere qui fait avoir tout faux</li>
+    <li>Et pour finir c'etait pas facile a faire</li>
+    
+    <h2>Voici comment est le triangle qu'on doit dessiner</h2>
