--- a/projet.html
+++ b/projet.html
@@ -1,4 +1,4 @@
-<title> Projet Sierpinski</title>
+<h2> Projet Sierpinski</h2>
 
 <p>Le projet sierpinski est un projet qui sera note au cours de cette evaluation, on peut le faire grace a Edupython et il est quand meme assez long a faire.<p>
 
@@ -8,4 +8,4 @@
     <li>En suite se trompe sur un caractere qui fait avoir tout faux</li>
     <li>Et pour finir c'etait pas facile a faire</li>
     
-    <h2>Voici comment est le triangle qu'on doit dessiner</h2>
+    <p>Voici comment est le triangle qu'on doit dessiner</p>
