--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      </head>
     <body>
       
-<img src="https://www.bing.com/images/search?view=detailV2&ccid=qCHe4%2b3Y&id=FA6A74D56AE2E0390F9AD9476A57467B1EA94E08&thid=OIP.qCHe4-3YdOoF1HUsgdmnOAHaE8&mediaurl=http%3a%2f%2fupload.wikimedia.org%2fwikipedia%2fen%2fthumb%2f0%2f03%2fFlag_of_Italy.svg%2f1500px-Flag_of_Italy.svg.png&exph=1000&expw=1500&q=drapeau+italien&simid=608024102244909898&ck=382B3A035C1394DFA3CFD8A6F02D6A5F&selectedIndex=1&adlt=strict&FORM=IRPRST" />
+<img src="" alt="drapeau de l'Italie"/>
 
       <p>Bienvenue sur la page de Tommaso</p>
       
@@ -23,7 +23,7 @@
   <p>Mais sinon a part l'ecole je fait d'autre activite comme:</p>
   
   <ul>
-    <li>Je joue a la play<img src="https://www.bing.com/images/search?view=detailV2&ccid=0w6hDXzr&id=A5E9F45BABD7FAB24BF6DDF970B02A4396926A09&thid=OIP.0w6hDXzrjD4EDWKLimnikgHaEK&mediaurl=https%3a%2f%2fcdn.wccftech.com%2fwp-content%2fuploads%2f2015%2f02%2fplaystation_4_console_controller_ps4_92842_3840x2160.jpg&exph=2160&expw=3840&q=ps4&simid=608022766541275706&ck=C717EE542A03449D0C14A86D305803D6&selectedIndex=1&adlt=strict&FORM=IRPRST"</li>
+    <li>Je joue a la play(voir la <a href="">photo)</a> </li>
     <li>Je sort avec mes amis</li>
     <li>avant je jouer au foot c'est moins le cas maintenant</ul>
   
