--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <p>Mais sinon a part l'ecole je fait d'autre activite comme:</p>
   
   <ul>
-    <li>Je joue a la play(voir la <a href="">photo)</a> </li>
+    <li>Je joue a la play(voir la <a href="https://raw.githubusercontent.com/Tommaso210/tommaso210/main/80E5886D-3A55-4CEC-A9EE-5AA87E0E4233.jpeg">photo)</a> </li>
     <li>Je sort avec mes amis</li>
     <li>avant je jouer au foot c'est moins le cas maintenant</ul>
   
