--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      </head>
     <body>
       
-<img src="https://raw.githubusercontent.com/Tommaso210/tommaso210/main/ADC3970E-4496-405B-8592-AB42F4CB4447.jpeg" alt="drapeau de l'Italie"/>
+<img src="https://raw.githubusercontent.com/Tommaso210/tommaso210/main/ADC3970E-4496-405B-8592-AB42F4CB4447.jpeg" alt="drapeau de l'Italie"  height="450" width="550"/>
 
       <p>Bienvenue sur la page de Tommaso</p>
       
